<resources>
    <string name="app_name">Traveler\'s Diary</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="travels_text">Travels</string>
    <string name="diary_text">Diary</string>
    <string name="reminder_text">Reminder</string>
    <string name="map_text">Map</string>
    <string name="start_tracking_text">Start tracking</string>
    <string name="stop_tracking_text">Stop tracking</string>
    <string name="settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="open">Open</string>
    <string name="start_travel_text">Start travel</string>
    <string name="stop_travel_text">Stop travel</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="create">Create</string>
    <string name="discard">Discard</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="add_photo">Add photo</string>
    <string name="add_image">Add image</string>
    <string name="title">Title</string>
    <string name="text">Text</string>
    <string name="discard_changes_text">Discard changes?</string>
    <string name="save_changes_text">Save changes?</string>
    <string name="images">Images</string>
    <string name="albums">Albums</string>
    <string name="select">Select</string>
    <string name="delete">Delete</string>
    <string name="deleted">Deleted</string>
    <string name="share">Share</string>
    <string name="select_all">Select all</string>
    <string name="nothing_selected">Nothing selected</string>
    <string name="error">Error</string>
    <string name="no_images">No images</string>
    <string name="unknown">Unknown</string>


    <string name="edit_travel_dialog_title_create">Create new travel</string>
    <string name="edit_travel">Edit travel</string>
    <string name="edit_travel_dialog_default_title">Travel at %s</string>

    <string name="default_travel_title">Uncategorized</string>
    <string name="default_travel_description">Default category</string>

    <string name="login_activity_progress_dialog_title">Loading</string>
    <string name="login_activity_progress_dialog_message">Authenticating with Firebase...</string>
    <string name="login_activity_error_dialog_title">Authentication Error</string>
    <string name="login_activity_error_message_network">Network error: %s</string>
    <string name="login_activity_error_message_auth">Error authenticating with Google: %s</string>
    <string name="login_activity_error_message_invalid_provider">Invalid login provider: %s</string>

    <string name="travel_activity_title">A Travel</string>

    <string name="diary_list_action_mode_title_text">%1$d/%2$d</string>
    <string name="reminder_list_action_mode_title_text">%1$d/%2$d</string>

    <string name="reminder_dont_remind_text">Don\'t remind</string>
    <string name="reminder_choose_location_text">Choose location</string>
    <string name="reminder_new_remind_item_default_title">New remind item</string>
    <string name="reminder_no_title_text">No title</string>
    <string name="reminder_new_remind_item_default_text">Write text here to remind</string>
    <string name="reminder_show_checkboxes">Show Checkboxes</string>
    <string name="reminder_hide_checkboxes">Hide Checkboxes</string>
    <string name="reminder_error_save_text">Cannot save changes</string>
    <string name="reminder_error_data_text">Invalid data</string>
    <string name="reminder_error_time_text">Invalid time</string>
    <string name="reminder_error_distance_text">Invalid distance</string>
    <string name="reminder_error_location_text">Invalid location</string>
    <string name="reminder_place_picker_progress_dialog_title"></string>
    <string name="reminder_place_picker_progress_dialog_message">Loading...</string>
    <string-array name="reminder_type_names">
        <item>Don\'t remind</item>
        <item>Remind at time</item>
        <item>Remind at location</item>
    </string-array>
    <array name="reminder_type_icons">
        <item>@drawable/ic_alarm_off_black_24dp</item>
        <item>@drawable/ic_alarm_black_24dp</item>
        <item>@drawable/ic_location_on_black_24dp</item>
    </array>
    <string name="reminder_choose_distance_text">Enter a distance, or select from the list</string>
    <string-array name="reminder_distance_values">
        <item>50</item>
        <item>100</item>
        <item>150</item>
        <item>200</item>
        <item>300</item>
        <item>500</item>
        <item>1000</item>
    </string-array>

    <string-array name="interval_names">
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>10 hours</item>
    </string-array>

    <string-array name="interval_values">
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>600</item>
    </string-array>

    <string name="no_location_data_provided_text">No location data provided</string>
    <string name="geocoder_service_not_available">Sorry, the service is not available</string>
    <string name="geocoder_invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="geocoder_no_address_found">Sorry, no address found</string>
    <string name="geocoder_address_found">Address found</string>
    <string name="geocoder_no_geocoder_available">No geocoder available</string>
    <string name="location_format_address_line_with_gps">(%1$.6f, %2$.6f)</string>

    <string name="weather_api_data_url">http://api.openweathermap.org/data/2.5/weather?lat=%1$s&amp;lon=%2$s&amp;units=%3$s&amp;appid=%4$s&amp;lang=%5$s</string>
    <string name="weather_api_icon_url">http://openweathermap.org/img/w/%s.png</string>
    <string name="weather_api_info_text">%1$.0f ℃, %2$s</string>
    <string name="weather_api_na_text">N/A</string>

    <string name="travels_select_action_text">Select The Action</string>
    <string name="travels_delete_question_text">Delete Travel?</string>
    <string name="travels_delete_warning_text">You\'ll lose all diary notes, reminder items and tracks for the selected travel!</string>

    <string name="not_synced_image_warning">Some of your photos are not synchronized.
        \nIt could have happened because sync is disabled on other devices.</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="hide">Hide</string>
    <string name="new_travel">New travel</string>
    <string name="description">Description</string>
    <string name="title_field_is_empty">Title field is empty</string>

    <string name="dialog_cannot_tracking_title_text">Cannot start tracking!</string>
    <string name="dialog_cannot_tracking_message_text">No active travel</string>
    <string name="completed">Completed</string>
    <string name="your_text_here">Your text here</string>
    <string name="info">Info</string>
    <string name="travel_title_text">Travel title</string>
    <string name="info_dialog_start_text">Start:</string>
    <string name="info_dialog_end_text">End:</string>
    <string name="info_dialog_created_text">Created:</string>

    <string name="map_show_tracks_text">Show tracks</string>
    <string name="map_hide_tracks_text">Hide tracks</string>
    <string name="map_show_diary_notes_text">Show notes</string>
    <string name="map_hide_diary_notes_text">Hide notess</string>
    <string name="map_show_reminder_items_text">Show reminder</string>
    <string name="map_hide_reminder_items_text">Hide reminder</string>
</resources>
