<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_start"
        android:title="@string/start_travel_text"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_item_stop"
        android:title="@string/stop_travel_text"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_item_open"
        android:title="@string/open"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_item_edit"
        android:title="@string/edit"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_item_delete"
        android:title="@string/delete"
        app:showAsAction="always" />
</menu>