<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_travels"
            android:icon="@drawable/ic_bag_black_24dp"
            android:title="@string/travels_text" />
        <item
            android:id="@+id/nav_diary"
            android:icon="@drawable/ic_book_black_24dp"
            android:title="@string/diary_text" />
        <item
            android:id="@+id/nav_reminder"
            android:icon="@drawable/ic_bell_black_24dp"
            android:title="@string/reminder_text" />
    </group>
    <group
        android:id="@+id/menu_tracking"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_start_tracking"
            android:enabled="false"
            android:icon="@drawable/ic_start_circle_outline_black_24dp"
            android:title="@string/start_tracking_text" />
        <item
            android:id="@+id/nav_stop_tracking"
            android:icon="@drawable/ic_stop_circle_outline_black_24dp"
            android:title="@string/stop_tracking_text"
            android:visible="false" />
    </group>
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
    </group>
</menu>