<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/reminder_item_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ReminderAppBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/reminder_item_collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="24dp"
                    android:layout_marginTop="56dp"
                    android:paddingBottom="16dp"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.3">

                    <LinearLayout
                        android:id="@+id/reminder_big_title_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/reminder_item_big_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/title"
                            android:imeOptions="actionDone|flagNoEnterAction"
                            android:inputType="textAutoCorrect|textCapSentences|textNoSuggestions|textMultiLine"
                            android:maxLines="3"
                            android:textColor="@color/white"
                            android:textSize="30sp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:weightSum="3">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="3"
                                android:gravity="start">

                                <TextView
                                    android:id="@+id/reminder_item_travel"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/rounded_corners_green"
                                    android:drawableRight="@drawable/drop_down_arrow"
                                    android:ellipsize="end"
                                    android:gravity="center_vertical"
                                    android:maxLines="1"
                                    android:paddingBottom="3dp"
                                    android:paddingLeft="6dp"
                                    android:paddingRight="6dp"
                                    android:paddingTop="3dp"
                                    android:text="Great Britain, London "
                                    android:textColor="@color/white" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="end"
                                android:minWidth="88dp"
                                android:paddingLeft="16dp">

                                <android.support.v7.widget.AppCompatCheckBox
                                    android:id="@+id/reminder_item_completed_checkbox"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/completed" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </FrameLayout>

                <include
                    android:id="@+id/reminder_item_fragment_toolbar"
                    layout="@layout/toolbar_with_edit_text" />
            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/reminder_item_app_bar"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/remind_item_task"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:descendantFocusability="afterDescendants"
                    android:focusable="true"
                    android:paddingBottom="16dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha=".1"
                    android:background="@color/black" />

                <LinearLayout
                    android:id="@+id/reminder_time_location_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:orientation="horizontal"
                    android:paddingTop="8dp"
                    android:weightSum="1">

                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/reminder_item_type_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/editTextBackground"
                        android:minWidth="24dp"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/reminder_dont_remind_text_view"
                        style="@style/ListItemPrimaryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:background="?attr/editTextBackground"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:text="@string/reminder_dont_remind_text"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/reminder_item_date_text_view"
                        style="@style/ListItemPrimaryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:background="?attr/editTextBackground"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:text="01 JAN 2016"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/reminder_item_waypoint_title_text_view"
                        style="@style/ListItemPrimaryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="1"
                        android:background="?attr/editTextBackground"
                        android:ellipsize="end"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:maxLines="1"
                        android:text="Location title"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/reminder_item_time_text_view"
                        style="@style/ListItemPrimaryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:background="?attr/editTextBackground"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:text="08:35:00 PM"
                        android:visibility="gone" />

                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/reminder_item_waypoint_distance_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:background="?attr/editTextBackground"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:gravity="center"
                        android:minWidth="32dp"
                        android:visibility="gone" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>
</RelativeLayout>